# bootloader-and-updater

./: .gitignore  CMakeLists.txt  STM32F051R8.ld  build.sh  program.sh  readme.md  test.sh  todo.md  toolchain.cmake  x.sh
.github/workflows/: main.yml
application/: CMakeLists.txt  readme.md
application/include/: buffered_usart.h  command_parser.h  event.h  event_queue.h  ringbuffer.h  timers.h  update_handler.h  vector_table.h  xmodem.h  xmodem_parser.h
application/source/: buffered_usart.c  command_parser.c  event_queue.c  main.c  reset_handler.c  ringbuffer.c  timers.c  update_handler.c  vector_table.c  xmodem.c  xmodem_parser.c
bootloader/: CMakeLists.txt  STM32F051R8.ld  readme.md
bootloader/include/: boot.h
bootloader/source/: boot.c  main.c  reset_handler.c
debug/: gdb-bootloader.cfg  gdb.cfg  openocd.cfg
drivers/: CMakeLists.txt  readme.md
drivers/critical_section/: CMakeLists.txt  critical_section.h
drivers/gpio/: CMakeLists.txt
drivers/include/: flash.h  nvic.h  rcc.h  tim.h  usart.h
drivers/linker_script_application/: CMakeLists.txt  STM32F051R8.ld
drivers/linker_script_bootloader/: CMakeLists.txt  STM32F051R8.ld
drivers/linker_script_standalone/: CMakeLists.txt
drivers/rcc/: CMakeLists.txt  rcc.c
drivers/rcc/include/: rcc.h
drivers/scb/: CMakeLists.txt
drivers/source/: flash.c  nvic.c  rcc.c  scb.c  tim.c  usart.c
drivers/startup/: CMakeLists.txt  readme.md
drivers/startup/source/: STM32F051R8.ld
drivers/syscfg/: CMakeLists.txt  syscfg.c
drivers/syscfg/include/: syscfg.h
drivers/usart/: CMakeLists.txt  usart.c
drivers/usart/include/: usart.h
git_version/: CMakeLists.txt  generate.sh
libraries/critical_section/: CMakeLists.txt
libraries/drivers/: CMakeLists.txt
libraries/drivers/include/: boot_report.h  driver_addresses.h  flash.h  gpio.h  nvic.h  rcc.h  scb.h  spi.h  tim.h  usart.h
libraries/drivers/source/: flash.c  gpio.c  nvic.c  rcc.c  scb.c  spi.c  syscfg.c  tim.c  usart.c
libraries/external_flash/: CMakeLists.txt
libraries/external_flash/include/: external_flash.h  microchip_sst25vf080b.h
libraries/external_flash/source/: external_flash.c  microchip_sst25vf080b.c
libraries/flash_copy/: CMakeLists.txt  flash_copy.c
libraries/flash_copy/include/: flash_copy.h
libraries/git_version/: CMakeLists.txt  generate.sh
libraries/git_version/include/: git_version.h
libraries/info_region/: CMakeLists.txt  info_region.c
libraries/info_region/include/: info_region.h
libraries/linker_script_application/: CMakeLists.txt
libraries/linker_script_bootloader/: CMakeLists.txt
libraries/startup/: CMakeLists.txt  startup.c
linker_scripts/: common.ld
linker_scripts/application/: CMakeLists.txt  STM32F051R8.ld
linker_scripts/bootloader/: CMakeLists.txt  STM32F051R8.ld
linker_scripts/standalone/: CMakeLists.txt  STM32F051R8.ld
startup/: CMakeLists.txt
tests/: CMakeLists.txt  readme.md
tests/include/: test_assert.h
tests/tests/: application_command_parser_tests.c  application_event_queue_tests.c  application_ringbuffer_tests.c  application_xmodem_parser_tests.c  test_assert.c
