project(linker_script_bootloader)

add_library(${PROJECT_NAME} INTERFACE)
target_link_options(${PROJECT_NAME} INTERFACE
    "-T${PROJECT_SOURCE_DIR}/STM32F051R8.ld"
    "-T${COMMON_LINKER_SCRIPT}"
)
set_target_properties(${PROJECT_NAME} PROPERTIES
    INTERFACE_LINK_DEPENDS "${PROJECT_SOURCE_DIR}/STM32F051R8.ld;${COMMON_LINKER_SCRIPT}"
)
